# Autonomous-Mobile-Robot

./: LICENSE  README.md
Arduino/libraries/AMRmotor/: AMR_Motor.cpp  AMR_Motor.h
Arduino/libraries/Bolder_Flight_Systems_Controls/examples/arduino/control_example/: control_example.ino
Arduino/libraries/Bolder_Flight_Systems_Excitation/src/: doublet.h
Arduino/libraries/ESP32Encoder/examples/get_rpm/: get_rpm.ino
Arduino/libraries/ESP32Encoder/src/: AmrEncoder.cpp  AmrEncoder.h
Arduino/libraries/config/: amr_base_config.h
Arduino/libraries/kinematics/: Kinematics.cpp
Arduino/libraries/pid/: PID.cpp
amr_teleop_wifi/: amr_teleop_wifi.ino
docs/: AMR-MUST.pptx
esp32/firmware/src/firmware/: firmware.ino
hardware/: hardware.txt
src/amr/: CMakeLists.txt  package.xml
src/amr/include/: amr_base.h
src/amr/launch/: bringup.launch  minimal.launch  mybringup.launch
src/amr/launch/include/: laser.launch
src/amr/launch/include/imu/: imu.launch
src/amr/launch/include/lidar/: rplidar.launch
src/amr/param/imu/: imu_calib.yaml
src/amr/src/: amr_base.cpp  amr_base_node.cpp  odom.py
src/amr/urdf/: amr.urdf.xacro
src/amr/urdf/accessories/: imu.urdf.xacro  kinect.urdf.xacro  rplidar.urdf.xacro
src/amr_controller/: CMakeLists.txt  package.xml
src/amr_controller/config/: diff_drive_controller.yaml  simple_controller.yaml
src/amr_controller/include/amr_controller/: simple_controller.h
src/amr_controller/launch/: controller.launch
src/amr_controller/nodes/: noisy_controller_node.cpp  simple_controller_node.cpp
src/amr_controller/src/: noisy_controller.cpp  simple_controller.cpp
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/launch/: description_amr.launch
src/amr_description/rviz/: amr_rviz_config.rviz
src/amr_description/urdf/: amr.urdf.xacro
src/amr_description/urdf/accessories/: imu.urdf.xacro  kinect.urdf.xacro  payload.urdf.xacro  rplidar.urdf.xacro  top_plate.urdf.xacro
src/amr_gazebo/: CMakeLists.txt  package.xml
src/amr_gazebo/config/: wheel_pid.yaml
src/amr_gazebo/launch/: bringup.launch  spawn_entity.launch  warehouse.launch
src/control_test/: CMakeLists.txt  package.xml
src/control_test/config/: control_test.yaml
src/control_test/launch/: control_test.launch
src/imu_calib/imu_calib-master/include/imu_calib/: apply_calib.h  do_calib.h
src/imu_calib/imu_calib-master/src/: apply_calib.cpp  do_calib.cpp
src/mapping2_ws/: slam.sh
src/mapping2_ws/install/: local_setup.sh  setup.sh
src/mapping2_ws/install/autonomous_exploration/share/autonomous_exploration/: package.sh
src/mapping2_ws/install/cpp_pkg2/lib/cpp_pkg2/: cpp_node
src/mapping2_ws/install/cpp_pkg2/share/cpp_pkg2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/mapping2_ws/install/fw_robot/share/fw_robot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  robot.launch
src/mapping2_ws/install/hector_imu_tools/share/hector_imu_tools/: package.bash  package.zsh
src/mapping2_ws/install/hector_marker_drawing/share/hector_marker_drawing/: package.bash  package.zsh
src/mapping2_ws/install/hector_nav_msgs/share/hector_nav_msgs/: package.bash  package.zsh
src/mapping2_ws/install/hector_slam/share/hector_slam/: package.bash  package.zsh
src/mapping2_ws/install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/mapping2_ws/install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
src/mapping2_ws/install/my_bot/share/my_bot/config/: drive_bot.rviz  empty.yaml  mapper_params_online_async.yaml  my_controllers.yaml  view_bot.rviz
src/mapping2_ws/install/my_bot/share/my_bot/description/: 4W_Robot_core.xacro  4W_robot.urdf.xacro  gazebo_control.xacro  inertial_4w_macros.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/mapping2_ws/install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
src/mapping2_ws/install/my_bot/share/my_bot/launch/: launch_sim.launch.py  rsp.launch.py
src/mapping2_ws/install/my_bot/share/my_bot/worlds/: cone.world  empty.world  model.sdf  my_world.world  no_roof_small_warehouse.world
src/mapping2_ws/install/my_cpp_pkg/share/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/mapping2_ws/install/my_cpp_pkg/share/log/: latest_build
src/mapping2_ws/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/mapping2_ws/install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
src/mapping2_ws/install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
src/mapping2_ws/install/rplidar_ros/lib/rplidar_ros/: rplidar_composition
src/mapping2_ws/install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/mapping2_ws/install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
src/mapping2_ws/install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/mapping2_ws/log/: latest_build
src/mapping2_ws/src/autonomous_exploration/: package.xml  setup.py
src/mapping2_ws/src/autonomous_exploration/autonomous_exploration/: control.py
src/mapping2_ws/src/fw_robot/: CMakeLists.txt
src/mapping2_ws/src/fw_robot/urdf/: robot.urdf
src/mapping2_ws/src/my_package/: package.xml  setup.py
src/mapping2_ws/src/tf2_py/: package.xml  setup.py
src/navigation_ws/: nav.sh  slam.sh  turtle.sh
src/navigation_ws/install/: local_setup.sh  setup.sh
src/navigation_ws/install/my_bot/share/my_bot/: package.sh
src/navigation_ws/install/pkg_py/lib/pkg_py/: pnode
src/navigation_ws/install/pkg_py/share/pkg_py/: package.sh  package.xml
src/navigation_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/navigation_ws/worlds/: warehouse.world
(+130 files in other folders)
